--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:all": "npm test -- --watchAll=false && npm run cy:headless",
     "test:coverage": "npm test -- --coverage",
     "eject": "react-scripts eject",
     "cy:open": "npx cypress open",
@@ -45,6 +46,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -58,6 +62,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^5.3.0"
+    "@types/cypress-cucumber-preprocessor": "^1.14.1",
+    "cypress": "^5.3.0",
+    "cypress-cucumber-preprocessor": "^3.0.0"
   }
 }
